# fileX

./: .gitignore  Cargo.toml  README.md
src/: filter_files.rs  get_files.rs  main.rs  new_file_name.rs  update_path.rs
