[package]
name = "filex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.79" }
clap = { version = "4.0", features = ["derive"] }
regex = { version = "1.10.2" }
walkdir = { version = "2.4.0" }
